<resources>
    <string name="app_name">Hikr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_email">Sign Up</string>
    <string name="register_facebook">Sign In with Facebook</string>
    <string name="register_google">Sign In with Google</string>
    <string name="register_login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>

    <string name="profile_bottom_bar">Profile</string>
    <string name="posts_bottom_bar">Posts</string>
    <string name="incorrect_password_email">email address or password is incorrect</string>

    <string name="testTextstring">
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip
        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string name="testTitleString">Night on the AT shelter</string>
    <string name="testLocationString">85.443, -84.323</string>
    <string name="testDateString">June 3rd, 2018</string>

    <string name="logged_in_as">Logged in as: </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="number_of_posts">Number of Posts: </string>
    <string name="title">Title</string>
    <string name="post">What do you see?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="enter_email_password">Email or Password is blank. Please enter both an email and a password</string>
</resources>
