<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_post"
        android:enabled="true"
        android:title="@string/create"
        android:icon="@drawable/ic_baseline_add_24px"
        android:visible="true"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_all_posts"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_horizontal_split_24px"
        android:title="@string/posts_bottom_bar"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_user_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24px"
        android:title="@string/profile_bottom_bar"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>